--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
     "unit": "px",
     "naming": "Kebab Case",
     "path": "public/",
-    "componentsPath": "c:\\Users\\Aliyu\\OneDrive\\Desktop\\onile-1\\src\\components",
-    "screensPath": "c:\\Users\\Aliyu\\OneDrive\\Desktop\\onile-1\\src\\pages"
+    "componentsPath": "c:\\Users\\Aliyu\\OneDrive\\Desktop\\Onile Project\\src\\components",
+    "screensPath": "c:\\Users\\Aliyu\\OneDrive\\Desktop\\Onile Project\\src\\pages"
   }
 }
